<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/NormalAttendence_layout"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    >
    
    <TextView
        android:id="@+id/NA_showAttendence"
        android:layout_width="fill_parent"
        android:layout_height="300sp" 
        android:gravity="center"
        android:textSize="30sp"
        />
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
        android:id="@+id/NA_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA_pause"
         
        />
        <Button
        android:id="@+id/NA_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA_stop"
         
        />
        <Button
        android:id="@+id/NA_choudian_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA_choudian"
         
        />
        
    
    </LinearLayout>
    
</LinearLayout>